# lilililililili

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLING.md  INSTALL_QUICK.md  LICENSE  Makefile  PUBLISHED.txt  README.md  README_RU.md  TROUBLESHOOTING.md  account_manager.py  admin_handlers.py  bot.py  config.py  config_example.py  database.py  docker-compose.yml  env.py  examples.py  keyboards.py  keyboars.py  main.py  message_formatter.py  models.py  platform_integrations.py  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  setup.py  telegram_bot.py  tg_parser.py  vk_parser.py
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
tests/: __init__.py  conftest.py  test_bot.py
