[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopost-bot"
version = "1.0.0"
description = "Advanced Python bot for automatic content publishing with timezone support"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "dyukk-y", email = "your-email@example.com"}
]
keywords = ["autopost", "bot", "scheduling", "timezone", "telegram", "vk", "instagram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
dependencies = [
    "pytz==2024.1",
    "APScheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "flake8==6.1.0",
    "black==23.12.0",
    "mypy==1.7.1",
]
telegram = [
    "python-telegram-bot>=20.0",
]
vk = [
    "vk-api>=11.10.0",
]
instagram = [
    "instagrapi>=2.0.0",
]
twitter = [
    "tweepy>=4.14.0",
]
reddit = [
    "praw>=7.7.0",
]

[project.urls]
"Homepage" = "https://github.com/dyukk-y/lilililililili"
"Bug Reports" = "https://github.com/dyukk-y/lilililililili/issues"
"Documentation" = "https://github.com/dyukk-y/lilililililili#readme"
"Source Code" = "https://github.com/dyukk-y/lilililililili"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
